--- a/_data/keywords_de.yml
+++ b/_data/keywords_de.yml
@@ -2,8 +2,8 @@
 Akutes Respiratorisches Distress-Syndrom:
   tags:
   - akutes Atemnotsyndrom (ARDS)
-  - Akutes Respiratorisches Distress-Syndrom (ARDS)
   - distress
+  - Akutes Respiratorisches Distress-Syndrom (ARDS)
   aliases:
   - ARDS
   matches:
@@ -52,6 +52,11 @@ Antikörper:
   - Antikörper-negativ
   matches: []
   aliases: []
+Antioxidantien:
+  tags:
+  - Antioxidantienstatus
+  aliases: []
+  matches: []
 Antiviral:
   tags:
   - antivirales Potential
@@ -89,18 +94,18 @@ Behandlung:
   aliases: []
 Bewegung:
   tags:
-  - Bewegungsverhalten
-  - Bewegungsmangel
-  - körperliche Aktivität nach der Pandemie
   - körperliche Inaktivität
+  - Bewegungsverhalten
+  - körperliche Aktivität
+  - sitzendes Verhalten
+  - sitzende Tätigkeit
   - körperliches Aktivitätsniveau
+  - Bewegungsmangel
+  - körperliche Fitness
   - körperliche Betätigung
   - Körperliche Inaktivität
   - körperliche Anstrengung
-  - körperliche Aktivität
-  - körperliche Fitness
-  - sitzendes Verhalten
-  - sitzende Tätigkeit
+  - körperliche Aktivität nach der Pandemie
   matches:
   - körperlich
   - sitzend
@@ -121,6 +126,10 @@ Delta-Variante:
   matches:
   - Delta
   aliases: []
+Depression:
+  tags: []
+  aliases: []
+  matches: []
 Diabetes:
   tags:
   - Diabetes mellitus
@@ -156,11 +165,13 @@ Ernährung:
   tags:
   - pflanzliche Ernährung
   - vegane Ernährung
+  - Nahrungsergänzungsmittel
   - Mangelernährung
   - Ernährungsmuster
   - COVID-19 und Ernährung
   - Ernährungsungleichheiten
   - Ernährungsbedingte Immunität
+  - Essen zum Mitnehmen
   - Qualität der Ernährung
   - Doppelbelastung durch Mangelernährung
   - Ernährungsverhalten
@@ -168,18 +179,21 @@ Ernährung:
   - Ernährungsdefizite
   - mediterrane Ernährung
   - ernährungsbedingter Entzündungsindex
-  - Essen zum Mitnehmen
-  - Nahrungsergänzungsmittel
   - Nahrungsaufnahme
   matches:
   - Essen
   - Nahrung
   aliases:
   - Nahrungsergänzung
+  - Nutrazeutika
   denys:
   - Interessen
   - Messenger
   - Essentiell
+Etesevimab:
+  tags: []
+  aliases: []
+  matches: []
 Gesundheit:
   tags:
   - psychische Gesundheit
@@ -188,6 +202,7 @@ Gesundheit:
   - Gesundheitsverhalten
   - Mitarbeiter des Gesundheitswesens
   - Gesundheitsvorsorge
+  - gesundes Altern
   - Öffentliche Gesundheit
   - menschliche Gesundheit
   - Online-Gesundheitsinformationen
@@ -195,8 +210,10 @@ Gesundheit:
   - Gesundheitsbeschwerden
   - betriebliche Gesundheitsförderung
   - Gesundheitsinformationen
+  - Gesundheitszustand
   - Lungengesundheit
   - geistige Gesundheit
+  - gesunder Lebensstil
   - ganzheitliche Gesundheit
   - Gesundheitssicherheit
   - Gesundheitspersonal
@@ -208,9 +225,6 @@ Gesundheit:
   - Mentale Gesundheit
   - Metabolische Gesundheit
   - pharmazeutische Gesundheitsinfrastruktur
-  - gesundes Altern
-  - gesunder Lebensstil
-  - Gesundheitszustand
   matches:
   - gesund
   aliases: []
@@ -219,9 +233,12 @@ Gewicht:
   - Gewichtsveränderungen
   - Körpergewicht
   - Gewichtszunahme
+  - viszerale Adipositas
+  - Kinder-Adipositas
   aliases:
   - Fettleibigkeit
   - Übergewicht
+  - Adipositas
   denys:
   - Gleichgewicht
   matches: []
@@ -247,6 +264,8 @@ Immunglobuline:
   - Immunglobulin
   - "^IgA"
   - "^IgG"
+  - " IgA"
+  - " IgG"
   aliases:
   - IgA$
   - IgG$
@@ -271,9 +290,9 @@ Immunität:
   aliases: []
 Immunmodulation:
   tags:
+  - immunmodulatorische Wirkung
   - Immunomodulation
   - Immunomodulator
-  - immunmodulatorische Wirkung
   - immunmodulierende Nährstoffe
   - Immunmodulator
   - immunmodulierende Wirkstoffe
@@ -297,20 +316,19 @@ Impfstatus:
 Impfstoff (mRNA):
   tags:
   - mRNA-Impfstoff
+  - mrna
   - LNP-formulierte mRNA-Impfstoffe
-  - mRNA-Impfstoffe
+  - mRNA COVID-19-Impfstoffe
   - mRNA-Omicron
   - mRNA-1273
+  - mRNA-Impfstoffe
   - messenger RNA (mRNA) COVID-19 Impfstoffe
   - mRNA-basierter Impfstoff
-  - mrna
-  - mRNA COVID-19-Impfstoffe
   matches:
   - mRNA
   aliases: []
 Impfstoffe:
   tags:
-  - SARS-CoV-2-Impfungen
   - Impfstoff-Durchbruchsinfektionen
   - impfstoffinduzierte immunthrombotische Thrombozytopenie
   - mRNA-Impfstoff
@@ -318,15 +336,20 @@ Impfstoffe:
   - Ad26.COV2-Impfstoff
   - Impfstoff-induzierte immunthrombotische Thrombozytopenie
   - Covid-Impfstoff-Wirksamkeit
+  - Impfstoffadjuvans
+  - Impfstoff-Nanoträger
   - Wirksamkeit des Impfstoffs
   - Impfstofftyp
   - Impfstoff-induzierte thrombotische Thrombozytopenie
   - Impfstoff-Nebenwirkungen
   - LNP-formulierte mRNA-Impfstoffe
   - Impfstoff der Universität Oxford
+  - mRNA COVID-19-Impfstoffe
   - Anti-SARS-CoV-2-Impfstoff
   - Impfstoff-induzierte Immunität
   - ChAdOx1 nCoV-19 Coronavirus-Impfstoff
+  - COVID-19-Impfstoff
+  - Impfstoff von Pfizer
   - Impfstoff-induzierte thrombotische Thrombozytopenie (VITT)
   - Ergänzung zu Impfstoffen
   - Impfstoff-Nationalismus
@@ -335,21 +358,17 @@ Impfstoffe:
   - mRNA-Impfstoffe
   - Virale Vektorimpfstoffe
   - Impfstoffsicherheit
+  - Anti-Impfstoff
+  - SARS-CoV-2-Impfungen
   - messenger RNA (mRNA) COVID-19 Impfstoffe
   - Impfstoffschutz
   - Impfstoff Durchbruchinfektionen
   - Wirksamkeit der Impfstoffe
+  - Impfstoffmisstrauen
   - Adenovirus-vermittelte Impfstoffe
   - Vermeidung von heparinähnlichen Antikoagulantien ChAdOx-Impfstoff
   - Adenovirus-Vektor-DNA & RNA-basierte SARS-CoV-2-Impfstoffe
   - mRNA-basierter Impfstoff
-  - Impfstoffadjuvans
-  - Impfstoff-Nanoträger
-  - mRNA COVID-19-Impfstoffe
-  - COVID-19-Impfstoff
-  - Impfstoff von Pfizer
-  - Anti-Impfstoff
-  - Impfstoffmisstrauen
   aliases:
   - Impfung
   matches:
@@ -362,6 +381,7 @@ Infektion:
   - Atemwegsinfektionen
   - Reinfektion
   - Rolle bei der COVID-19-Infektion
+  - Infektionsrisiko
   - akute Atemwegsinfektion (ARTI)
   - Infektionskrankheiten der Atemwege
   - Prä-Infektion
@@ -371,7 +391,6 @@ Infektion:
   - Virusinfektion
   - Atemwegsvirusinfektion
   - Vitamin-D3-Spiegel vor der Infektion
-  - Infektionsrisiko
   - Virusinfektionen
   - Infektionsraten
   - Infektionsausbruch
@@ -395,10 +414,10 @@ Influenza:
 Intensivstation:
   tags:
   - Pädiatrische Intensivstation
-  - Aufnahme auf der Intensivstation
   - ICU-Aufnahme
   - Intensivpflege
   - Intensivpatient
+  - Aufnahme auf der Intensivstation
   - Ergebnisse der Intensivpflege
   aliases:
   - ICU
@@ -415,10 +434,10 @@ Interleukin:
   - Zytokinsturm
   - Zytokine
   - Regulierung der Zytokinantwort
-  - Zytokin-Sturm-Syndrom
-  - entzündliche Zytokine
   - löslicher IL-6R
+  - Zytokin-Sturm-Syndrom
   - Interleukin-6
+  - entzündliche Zytokine
   matches:
   - IL6
   - IL-6
@@ -453,6 +472,14 @@ Jugend:
   - Teenager
   aliases:
   - Kind
+Krankenhaus:
+  tags:
+  - Krankenhausaufenthalt
+  - Risiko eines Krankenhausaufenthalts
+  - hospitalisierte Patienten
+  aliases:
+  - Spital
+  matches: []
 Krankheit:
   tags:
   - Infektionskrankheiten
@@ -564,26 +591,26 @@ Medikamente:
   tags:
   - antivirale Medikamente
   - Repurposing von Medikamenten
+  - Selbstmedikationspraktiken
   - wiederverwendete Medikamente
   - Repurposing-Medikamente
-  - Medikamenten-Repurposing
-  - orale Anti-COVID-19 Medikamente
-  - antivirales Medikament
-  - Medikamentenwirksamkeit
-  - Mangel an spezifischen Medikamenten
-  - Medikamente auf Metallbasis
-  - entzündungshemmende Medikamente
-  - Selbstmedikationspraktiken
-  - Selbstmedikation
   - Repurposing von Arzneimitteln
   - Verabreichung von Arzneimitteln
   - Arzneimittelwechselwirkung
+  - Medikamenten-Repurposing
   - Überwachungsprogramme für verschreibungspflichtige Arzneimittel
   - Arzneimittelwirksamkeit
+  - orale Anti-COVID-19 Medikamente
+  - antivirales Medikament
   - pflanzliche Arzneimittel
   - nutrazeutische Arzneimittel
   - rezeptfreie Arzneimittel
   - niedermolekulare Arzneimittel
+  - Selbstmedikation
+  - Medikamentenwirksamkeit
+  - Mangel an spezifischen Medikamenten
+  - Medikamente auf Metallbasis
+  - entzündungshemmende Medikamente
   matches:
   - Medikament
   - Medikation
@@ -616,6 +643,10 @@ Mikronährstoffe:
   matches:
   - Mikronährstoff
   aliases: []
+Mineralien:
+  tags: []
+  aliases: []
+  matches: []
 Moderna:
   tags: []
   aliases:
@@ -709,21 +740,21 @@ Paxlovid:
   matches: []
 Peptide:
   tags:
+  - Thymosin-α
   - Antimikrobielle Peptide
   - Peptide und Proteine
-  - Cathelicidin Peptide
   - antimikrobielles Peptid
-  - Thymosin-α
+  - Cathelicidin Peptide
   aliases: []
   matches:
   - Peptid
   - Thymosin
 Pfizer:
   tags:
-  - Pfizer-Biontech
   - BNT162b2
-  - BNT162B2
+  - Pfizer-Biontech
   - Impfstoff von Pfizer
+  - BNT162B2
   aliases:
   - BioNTech
   - BNT162
@@ -740,12 +771,22 @@ Pflanzen:
   matches:
   - pflanzlich
   aliases: []
+Plättchenfaktor 4:
+  tags:
+  - Plättchenfaktor 4/Polyanion-Komplex
+  - DNA-PF4-Interaktionen
+  - Antiplättchenfaktor 4
+  - PF4-Antikörper
+  aliases:
+  - PF4
+  matches: []
 Polyphenole:
   tags:
   - Tee-Polyphenole
   aliases:
   - Flavonoide
   - Flavanoide
+  - Quercetin
   matches: []
 Post-Covid:
   tags:
@@ -825,6 +866,14 @@ Schweregrad:
   - COVID-19-Schweregrad
   aliases: []
   matches: []
+Schweres Akutes Respiratorisches Syndrom:
+  tags:
+  - schweres akutes respiratorisches Syndrom
+  - SARS
+  - Schweres Akutes Respiratorisches Syndrom Coronavirus 2
+  aliases:
+  - "^SARS$"
+  matches: []
 Selen:
   tags:
   - Selenoproteine
@@ -847,10 +896,10 @@ Serum:
   matches: []
 Spike-Protein:
   tags:
-  - COVID Spike Protein
   - Anti-Spike neutralisierende Antikörper
   - Spike-Antikörper-Abnahme
   - Anti-Spike-IgG
+  - COVID Spike Protein
   - S1-Spike-Mutation
   aliases: []
   matches:
@@ -859,13 +908,13 @@ Sport:
   tags:
   - sportliche Aktivität
   - Sportbeteiligung
+  - Aerobes Training
   - Sport und Raum
   - Sportanbieter
+  - Trainingsbelastung
   - sportliche Betätigung
   - sportliche Leistung
   - Sport für alle
-  - Aerobes Training
-  - Trainingsbelastung
   - Online-Trainingsprogramm
   aliases:
   - Training
@@ -894,11 +943,11 @@ Stress:
   - Distress
 Supplementierung:
   tags:
+  - Vitamin-D-Supplementation
   - Vitamin-E-Supplementierung
   - Vitaminsupplementierung
   - Magnesium-Supplementierung
   - Vitamin-D-Supplementierung
-  - Vitamin-D-Supplementation
   aliases: []
   matches:
   - Supplementation
@@ -927,7 +976,8 @@ Tee:
   - Grüner Tee
   - Teegetränk
   - Tee-Polyphenol
-  aliases: []
+  aliases:
+  - EGCG
   matches: []
   denys:
   - Teenager
@@ -977,17 +1027,17 @@ Thrombozyten:
   - Impfstoff-induzierte thrombotische Thrombozytopenie
   - Thrombose mit Thrombozytopenie-Syndrom
   - Prothrombotische Immunthrombozytopenie
+  - Autoimmun-HIT (aHIT)
   - Heparin-induzierte Thrombozytopenie (HIT)
   - Impfstoff-induzierte thrombotische Thrombozytopenie (VITT)
+  - VITT-Modell
+  - Thrombozytenfaktor-4-Antikörper
   - Impfstoff-assoziierte thrombotische Thrombozytopenie
   - Impfstoff-induzierte (immunologische) thrombotische Thrombozytopenie
+  - Rachitis
+  - Thrombozyten-aktivierender Faktor
   - Thrombotische Thrombozytopenie Purpura
   - Heparin-induzierte Thrombozytopenie
-  - Autoimmun-HIT (aHIT)
-  - VITT-Modell
-  - Rachitis
-  - Thrombozytenfaktor-4-Antikörper
-  - Thrombozyten-aktivierender Faktor
   matches: []
   aliases:
   - Thrombozytopenie
@@ -1022,13 +1072,14 @@ Tuberkulose:
 Ultraviolette Strahlung:
   tags:
   - UV-B
+  - ultraviolettes Licht
   - solares UV-B
   - UV-A
-  - ultraviolettes Licht
   matches:
   - UV-
   - ultraviolet
-  aliases: []
+  aliases:
+  - Sonnenlicht
 Unerwünschte Ereignisse:
   tags:
   - unerwünschte Ereignisse
@@ -1038,18 +1089,25 @@ Unerwünschte Ereignisse:
   matches: []
 Virus:
   tags:
+  - Virale Infektionen
   - Coronavirus-Krankheit 2019
   - Coronavirus-Erkrankung 2019
   - Viruseintritt
   - Virusübertragung
   - Atemwegsvirus
   - Virus and oxidativer stress
+  - Adenoviraler Vektor
   - Adenovirus
+  - Influenzaviren
   - Virusinfektionen der Atemwege
+  - Virale Immunität
+  - viral kodierte Selenoproteine
   - SARS-CoV-2 RNA-Virus und RNA-Mutanten
+  - Viral 3CLpro
   - Coronavirus-Erkrankung (COVID-19)
   - Schweres Akutes Respiratorisches Syndrom Coronavirus 2
   - SARS-CoV-2-Virus
+  - Coronaviren
   - Virusinfektion
   - ChAdOx1 nCoV-19 Coronavirus-Impfstoff
   - Influenzavirus
@@ -1059,28 +1117,21 @@ Virus:
   - Coronaviruserkrankung 2019
   - Coronavirus-Erkrankungen-19
   - Coronavirus-Krankheit-2019-Prävention
+  - Virusvarianten
+  - Virale Vektorimpfstoffe
+  - Antivirus
   - Viruslast
   - Humanes Immundefizienz-Virus
+  - virale Clearance
+  - akute virale Infektionen der Atemwege
   - Coronavirus-induzierte Krankheit 2019
   - 2019 neuartiges Coronavirus
   - Adenovirus-vermittelte Impfstoffe
   - Adenovirus-DNA-Integration in Säugetiergenome
   - Adenovirus-Vektor-DNA-Integration in menschliches Genom
+  - Expression adenoviraler Gene in Vektor-DNA
   - Adenovirus-Vektor-DNA & RNA-basierte SARS-CoV-2-Impfstoffe
   - SARS-Cov-2-Virus
-  - Virusvarianten
-  - Influenzaviren
-  - Coronaviren
-  - Virale Infektionen
-  - Adenoviraler Vektor
-  - Virale Immunität
-  - viral kodierte Selenoproteine
-  - Viral 3CLpro
-  - Virale Vektorimpfstoffe
-  - virale Clearance
-  - akute virale Infektionen der Atemwege
-  - Expression adenoviraler Gene in Vektor-DNA
-  - Antivirus
   matches:
   - Viren
   - viral
@@ -1105,39 +1156,40 @@ Vitamin C:
   aliases: []
 Vitamin D:
   tags:
-  - Serum Vitamin D
   - Vitamin-D-verwandte Gene
   - hochdosierte orale Vitamin-D-Therapie
   - Vitamin D-Mangel
+  - Vitamin-D-Supplementation
   - niedriger Vitamin-D-Status
   - 25-Hydroxyvitamin D
+  - 25(OH)D3
+  - 24.25(OH)2D3
+  - 3-epi-25(OH)D3
   - Vitamin D Toxizität
+  - Serum Vitamin D
+  - Vitamin-D-Mangel
   - Vitamin D3
   - Vitamin D-Rezeptor
   - Vitamin-D-Rezeptor (VDR)
   - 25-Hydroxyvitamin D-1alpha-Hydroxylase (CYP27B1)
   - Vitamin-D3-Spiegel vor der Infektion
   - niedriger 25(OH)-Vitamin-D-Plasmaspiegel
+  - 25(OH)D
   - Vitamin-D-Rezeptoren (VDR)
   - 1-25-Dihidroxyvitamin D
   - Vitamin-D-Insuffizienz
+  - 1.25(OH)2D
   - 1.25-Dihydroxyvitamin D
   - 25-Hydroxyvitamin D31α
+  - 25(OH)2D
   - 25-Dihydroxyvitamin D
   - Vitamin-D-Status
   - Vitamin-D-Supplementierung
   - Serum-Vitamin-D-Spiegel
-  - Vitamin-D-Supplementation
-  - Vitamin-D-Mangel
-  - 25(OH)D3
-  - 24.25(OH)2D3
-  - 3-epi-25(OH)D3
-  - 25(OH)D
-  - 1.25(OH)2D
-  - 25(OH)2D
   matches: []
   aliases:
   - 25\(OH\)
+  - Calcifediol
 Vitamin E:
   tags:
   - Vitamin-E-Supplementierung
@@ -1145,8 +1197,8 @@ Vitamin E:
   aliases: []
 Vitamine:
   tags:
-  - Omega-3-Vitamine
   - Vitamin
+  - Omega-3-Vitamine
   aliases: []
   matches:
   - Vitamin$
@@ -1189,9 +1241,9 @@ Zink:
   aliases: []
 Zitrusfrüchte:
   tags:
+  - Zitrusflavanone
   - Orangen
   - Süßorange
-  - Zitrusflavanone
   matches:
   - Zitrone
   - Orange
@@ -1200,10 +1252,12 @@ Zitrusfrüchte:
 Ältere Menschen:
   tags:
   - ältere Erwachsene
+  - Senioren
   - Älterwerden
   - ältere Bevölkerung
   - ältere Frauen
   - Ältere Erwachsene
   matches:
   - älter
+  - Senior
   aliases: []
